--- a/index.html
+++ b/index.html
@@ -1,15 +1,54 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
-    <link rel="stylesheet" href="">
+    <title>JUMP＆CROSS</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 </head>
 
+
 <body>
-    github test
+
+<div class="title">
+    <a href="" title=""></a>
+</div>
+
+<div class="outnav">
+     <div class="nav">
+            <ul>
+                <li><a href="index.html" title="">|HOME|</a></li>
+                <li><a href="" title="">|ABOUT|</a></li>
+                <li><a href="" title="">|RESUME|</a></li>
+                <li><a href="album.html" title="">|ALBUM|</a>
+                                <ul>
+                                <li><a href="" title="">|TRAVEL|</a></li>
+                                <li><a href="" title="">|LIFE|</a></li>
+                                </ul>
+                </li>
+                <li><a href="" title="">|CONTACT|</a></li>
+            </ul>
+    </div>
+</div>
+
+
+<div class="pic">
+    <img src="photo/snowmt_BW.jpg" alt="snow_mountain" height="360" width="1263">
+</div>
+
+
+
 </body>
 
+<footer>
+    <div id="bottum">
+        <a>
+        Ankycheng © 2015. All Rights Reserved.
+        </a>
+    </div>
+
+</footer>
 </html>
+
